--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,21 @@
   text-align: center;
 }
 
+.logo {
+  max-width: 5em;
+  margin: 0 auto;
+}
+.mainNav {
+  background-color: rgba(37, 37, 37, 1);
+  color: white;
+}
+.mainNav a {
+  color: white;
+}
+.maniMenu div.dropdown_menu {
+  background-color: rgba(37, 37, 37, 1);
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
