--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.white {
+  color: white;
+}
+
 .logo {
   max-width: 5em;
   margin: 0 auto;
@@ -51,4 +55,3 @@
     transform: rotate(360deg);
   }
 }
-
