--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300&family=Roboto:wght@300&display=swap');
 .App {
   text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 
 .white {
