--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300&family=Roboto:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400&family=Roboto:wght@400&display=swap");
+
 .App {
   text-align: center;
-  font-family: 'Roboto', sans-serif;
-}
-
-.white {
+  font-family: "Roboto", sans-serif;
   color: white;
 }
 
