--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -1,3 +1,12 @@
 .dash_main{
     color: black;
 }
+
+.dash_table{
+    margin: 0 auto;
+    width: 600px;
+    padding-top: 100px ;
+}
+tbody tr{
+    text-align: left;
+}
